@@ -2,9 +2,13 @@
 // SPDX-License-Identifier: Apache-2.0
 
 import org.eclipse.jgit.api.Git
+import org.gradle.internal.os.OperatingSystem
 import org.gradle.testing.jacoco.plugins.JacocoTaskExtension.Output
 import org.jetbrains.intellij.tasks.DownloadRobotServerPluginTask
+import org.jetbrains.intellij.tasks.PatchPluginXmlTask
 import org.jetbrains.intellij.tasks.RunIdeForUiTestTask
+import org.jetbrains.intellij.utils.OpenedPackages
+import software.aws.toolkits.gradle.buildMetadata
 import software.aws.toolkits.gradle.ciOnly
 import software.aws.toolkits.gradle.findFolders
 import software.aws.toolkits.gradle.intellij.IdeFlavor
@@ -61,11 +65,11 @@ configurations {
     // TODO: https://github.com/gradle/gradle/issues/15383
     val versionCatalog = extensions.getByType<VersionCatalogsExtension>().named("libs")
     dependencies {
-        testImplementation(platform(versionCatalog.findDependency("junit5-bom").get()))
-        testImplementation(versionCatalog.findDependency("junit5-jupiterApi").get())
+        testImplementation(platform(versionCatalog.findLibrary("junit5-bom").get()))
+        testImplementation(versionCatalog.findLibrary("junit5-jupiterApi").get())
 
-        testRuntimeOnly(versionCatalog.findDependency("junit5-jupiterEngine").get())
-        testRuntimeOnly(versionCatalog.findDependency("junit5-jupiterVintage").get())
+        testRuntimeOnly(versionCatalog.findLibrary("junit5-jupiterEngine").get())
+        testRuntimeOnly(versionCatalog.findLibrary("junit5-jupiterVintage").get())
     }
 }
 
@@ -84,40 +88,23 @@ intellij {
     plugins.set(toolkitIntelliJ.productProfile().map { it.plugins.toMutableList() })
 
     downloadSources.set(toolkitIntelliJ.ideFlavor.map { it == IdeFlavor.IC && !project.isCi() })
-    instrumentCode.set(toolkitIntelliJ.ideFlavor.map { it != IdeFlavor.RD })
+    instrumentCode.set(toolkitIntelliJ.ideFlavor.map { it == IdeFlavor.IC || it == IdeFlavor.IU })
 }
 
 tasks.jar {
     archiveBaseName.set(toolkitIntelliJ.ideFlavor.map { "aws-toolkit-jetbrains-$it" })
 }
 
-tasks.patchPluginXml {
+tasks.withType<PatchPluginXmlTask>().all {
     sinceBuild.set(toolkitIntelliJ.ideProfile().map { it.sinceVersion })
     untilBuild.set(toolkitIntelliJ.ideProfile().map { it.untilVersion })
 }
 
 // attach the current commit hash on local builds
 if (!project.isCi()){
-    val buildMetadata = try {
-        val git = Git.open(project.rootDir)
-        val currentShortHash = git.repository.findRef("HEAD").objectId.abbreviate(7).name()
-        val isDirty = git.status().call().hasUncommittedChanges()
-
-        buildString {
-            append(currentShortHash)
-
-            if (isDirty) {
-                append(".modified")
-            }
-        }
-    } catch(e: IOException) {
-        logger.warn("Could not determine current commit", e)
-
-        "unknownCommit"
-    }
-
-    tasks.patchPluginXml {
-        version.set("${version.get()}+$buildMetadata")
+    val buildMetadata = buildMetadata()
+    tasks.withType<PatchPluginXmlTask>().all {
+        version.set(intellij.version.map { "$it+$buildMetadata" })
     }
 
     tasks.buildPlugin {
@@ -130,6 +117,19 @@ tasks.buildSearchableOptions {
     enabled = false
 }
 
+// https://github.com/JetBrains/gradle-intellij-plugin/blob/829786d5d196ab942d7e6eb3e472ac0af776d3fa/src/main/kotlin/org/jetbrains/intellij/tasks/RunIdeBase.kt#L315
+val openedPackages = OpenedPackages + listOf(
+    // very noisy in UI tests
+    "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
+) + with(OperatingSystem.current()) {
+    when {
+        isWindows -> listOf(
+            "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
+        )
+        else -> emptyList()
+    }
+}
+
 tasks.withType<Test>().all {
     systemProperty("log.dir", intellij.sandboxDir.map { "$it-test/logs" }.get())
     systemProperty("testDataPath", project.rootDir.resolve("testdata").absolutePath)
@@ -137,6 +137,8 @@ tasks.withType<Test>().all {
     // FIX_WHEN_MIN_IS_221: log4j 1.2 removed in 221
     systemProperty("log4j.configuration", jetbrainsCoreTestResources.resolve("log4j.xml"))
     systemProperty("idea.log.config.properties.file", jetbrainsCoreTestResources.resolve("toolkit-test-log.properties"))
+
+    jvmArgs(openedPackages)
 
     useJUnitPlatform()
 }
@@ -150,7 +152,7 @@ tasks.runIde {
     systemProperty("ide.plugins.snapshot.on.unload.fail", true)
     systemProperty("memory.snapshots.path", project.rootDir)
 
-    val alternativeIde = providers.environmentVariable("ALTERNATIVE_IDE").forUseAtConfigurationTime()
+    val alternativeIde = providers.environmentVariable("ALTERNATIVE_IDE")
     if (alternativeIde.isPresent) {
         // remove the trailing slash if there is one or else it will not work
         val value = alternativeIde.get()
@@ -175,7 +177,12 @@ ciOnly {
 }
 tasks.withType<RunIdeForUiTestTask>().all {
     systemProperty("robot-server.port", remoteRobotPort)
+    // mac magic
+    systemProperty("ide.mac.message.dialogs.as.sheets", "false")
+    systemProperty("jbScreenMenuBar.enabled", "false")
+    systemProperty("apple.laf.useScreenMenuBar", "false")
     systemProperty("ide.mac.file.chooser.native", "false")
+
     systemProperty("jb.consents.confirmation.enabled", "false")
     // This does some magic in EndUserAgreement.java to make it not show the privacy policy
     systemProperty("jb.privacy.policy.text", "<!--999.999-->")
@@ -193,6 +200,8 @@ tasks.withType<RunIdeForUiTestTask>().all {
         enabled.set(true)
         suspend.set(false)
     }
+
+    jvmArgs(openedPackages)
 
     ciOnly {
         configure<JacocoTaskExtension> {
